Simplify module descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -596,18 +596,23 @@
             <div class="category-modules-list">
                 <div class="category-module-item">
                     <div class="category-module-item-name">Module 1</div>
-                    <p class="category-module-item-desc">Foundations of RAG Architecture - Learn the basics of retrieval systems and how they augment generation capabilities.</p>
+                    <p class="category-module-item-desc">Foundations of RAG Architecture</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module1/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
                 <div class="category-module-item">
                     <div class="category-module-item-name">Module 2</div>
-                    <p class="category-module-item-desc">Advanced RAG Techniques - Explore sophisticated retrieval methods, indexing strategies, and optimization.</p>
+                    <p class="category-module-item-desc">Advanced RAG Techniques</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module2/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
                 <div class="category-module-item">
                     <div class="category-module-item-name">Module 3</div>
-                    <p class="category-module-item-desc">RAG Implementation in Production - Build and deploy RAG systems with real-world best practices.</p>
-                    <a href="#" class="category-module-link">Coming Soon</a>
+                    <p class="category-module-item-desc">RAG Implementation in Production</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module3/" class="category-module-link">Coming Soon</a>
+                </div>
+                <div class="category-module-item">
+                    <div class="category-module-item-name">Module 4</div>
+                    <p class="category-module-item-desc">Gradio Introduction</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module4/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
             </div>
         </div>
