--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                 <div class="category-module-item">
                     <div class="category-module-item-name">Module 3</div>
                     <p class="category-module-item-desc">RAG Implementation in Production</p>
-                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module3/" class="category-module-link">Coming Soon</a>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module3/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
                 <div class="category-module-item">
                     <div class="category-module-item-name">Module 4</div>
