Add AI Agent Platform section with modules

--- a/index.html
+++ b/index.html
@@ -642,6 +642,30 @@
             </div>
         </div>
 
+         <!-- AI(Voice/chat) Agent Platform building -->
+        <div class="category-card">
+            <div class="category-card-header">
+                <div class="category-card-icon">⚙️</div>
+                <div class="category-card-title">AI(Voice/chat) Agent Platform building</div>
+            </div>
+             <div class="category-module-item">
+                    <div class="category-module-item-name">Module 1</div>
+                    <p class="category-module-item-desc">Webhooks + FastAPI + Real-Time STT & Full-Duplex Calling</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module4/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
+                <div class="category-module-item">
+                    <div class="category-module-item-name">Module 2</div>
+                    <p class="category-module-item-desc">Real-Time Full-Duplex AI Calling – WebSocket vs Redis vs Kafka</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module4/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
+                <div class="category-module-item">
+                    <div class="category-module-item-name">Module 3</div>
+                    <p class="category-module-item-desc">Enterprise Integration - Connect multiple systems and build scalable automation solutions.</p>
+                    <a href="#" class="category-module-link">Coming Soon</a>
+                </div>
+            </div>
+        </div>
+
         <!-- FastAPI Module -->
         <div class="category-card">
             <div class="category-card-header">
