--- a/index.html
+++ b/index.html
@@ -658,10 +658,10 @@
                     <p class="category-module-item-desc">Real-Time Full-Duplex AI Calling – WebSocket vs Redis vs Kafka</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/voice%20agent%20platform/concept2/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
-                <div class="category-module-item">
+                  <div class="category-module-item">
                     <div class="category-module-item-name">Module 3</div>
-                    <p class="category-module-item-desc">Enterprise Integration - Connect multiple systems and build scalable automation solutions.</p>
-                    <a href="#" class="category-module-link">Coming Soon</a>
+                    <p class="category-module-item-desc">Websocket - Fundamental</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/voice%20agent%20platform/concept3/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
             </div>
         </div>
