--- a/index.html
+++ b/index.html
@@ -678,10 +678,10 @@
                     <p class="category-module-item-desc">FastAPI Fundamentals - Build fast, production-ready APIs with Python.</p>
                     <a href="#" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
-                <div class="category-module-item">
+                 <div class="category-module-item">
                     <div class="category-module-item-name">Module 2</div>
-                    <p class="category-module-item-desc">Advanced API Development - Authentication, validation, and database integration.</p>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                    <p class="category-module-item-desc">Python Asyncio - Complete Interactive Study Guide</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/fastapi/concept1/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
                 <div class="category-module-item">
                     <div class="category-module-item-name">Module 3</div>
