Update Module 3 description and link

--- a/index.html
+++ b/index.html
@@ -685,8 +685,8 @@
                 </div>
                 <div class="category-module-item">
                     <div class="category-module-item-name">Module 3</div>
-                    <p class="category-module-item-desc">Deployment & Scaling - Deploy FastAPI applications at scale with Docker and cloud platforms.</p>
-                    <a href="#" class="category-module-link">Coming Soon</a>
+                    <p class="category-module-item-desc">Complete Uvicorn & Swagger Study Guide - Full Stack Development</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/fastapi/concept3/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
             </div>
         </div>
