Revise Module 1 description and access link
Updated module description and link for Module 1.

--- a/index.html
+++ b/index.html
@@ -672,11 +672,10 @@
                 <div class="category-card-icon">⚡</div>
                 <div class="category-card-title">FastAPI - Modern Web Framework</div>
             </div>
-            <div class="category-modules-list">
-                <div class="category-module-item">
+            <div class="category-module-item">
                     <div class="category-module-item-name">Module 1</div>
-                    <p class="category-module-item-desc">FastAPI Fundamentals - Build fast, production-ready APIs with Python.</p>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                    <p class="category-module-item-desc">FastAPI Fundamentals - Complete Study Material</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/fastapi/concept2/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
                  <div class="category-module-item">
                     <div class="category-module-item-name">Module 2</div>
