Add Module 4 with description and link

--- a/index.html
+++ b/index.html
@@ -687,6 +687,11 @@
                     <p class="category-module-item-desc">Complete Uvicorn & Swagger Study Guide - Full Stack Development</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/fastapi/concept3/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
+            <div class="category-module-item">
+                    <div class="category-module-item-name">Module 4</div>
+                    <p class="category-module-item-desc">Web Apps Mastery: Context Managers, Logging & Pydantic - Comprehensive Study Guide</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/fastapi/concept4/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
             </div>
         </div>
 
