Add Module 5 section to index.html

--- a/index.html
+++ b/index.html
@@ -692,6 +692,11 @@
                     <p class="category-module-item-desc">Web Apps Mastery: Context Managers, Logging & Pydantic - Comprehensive Study Guide</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/fastapi/concept4/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
+             <div class="category-module-item">
+                    <div class="category-module-item-name">Module 5</div>
+                    <p class="category-module-item-desc">FastAPI Complete Study Guide: REST APIs with Relational & Vector Databases</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/fastapi/concept5/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
             </div>
         </div>
 
