--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module5/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
                 <div class="category-module-item">
-                    <div class="category-module-item-name">Module 6</div>/
+                    <div class="category-module-item-name">Module 6</div>
                     <p class="category-module-item-desc">Vector Databases & Chroma DB - Complete Guide</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module6/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
