--- a/index.html
+++ b/index.html
@@ -621,8 +621,13 @@
                 </div>
                 <div class="category-module-item">
                     <div class="category-module-item-name">Module 6</div>
-                    <p class="category-module-item-desc">Vector Databases & Chroma DB - Complete Guide</p>
+                    <p class="category-module-item-desc">Vector Databases & Chroma DB - Complete Guide Part1</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module6/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
+                <div class="category-module-item">
+                    <div class="category-module-item-name">Module 7</div>
+                    <p class="category-module-item-desc">Vector Databases & Chroma DB - Complete Guide Part2</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module7/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
             </div>
         </div>
