Add Module 8 section to index.html

--- a/index.html
+++ b/index.html
@@ -629,6 +629,11 @@
                     <p class="category-module-item-desc">Vector Databases & Chroma DB - Complete Guide Part2</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module7/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
+                <div class="category-module-item">
+                    <div class="category-module-item-name">Module 8</div>
+                    <p class="category-module-item-desc">Advanced Retrievers for RAG Systems - Complete Guide</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module8/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
             </div>
         </div>
 
