Add Module 10 study guide section to index.html

--- a/index.html
+++ b/index.html
@@ -639,6 +639,11 @@
                     <p class="category-module-item-desc">Comprehensive Study Guide: RAG & Vector Search Technologies</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module9/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
+                <div class="category-module-item">
+                    <div class="category-module-item-name">Module 10</div>
+                    <p class="category-module-item-desc">Comprehensive Multimodal AI & Speech Processing Study Guide</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module10/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
             </div>
         </div>
 
