--- a/index.html
+++ b/index.html
@@ -649,6 +649,11 @@
                     <p class="category-module-item-desc">Comprehensive Guide to Multimodal Vision Models, Image Captioning, and Video Generation</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module11/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
+                <div class="category-module-item">
+                    <div class="category-module-item-name">Module 12</div>
+                    <p class="category-module-item-desc">Complete MM-RAG & Multimodal AI Study Guide</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module12/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
             </div>
         </div>
 
