--- a/index.html
+++ b/index.html
@@ -654,6 +654,11 @@
                     <p class="category-module-item-desc">Complete MM-RAG & Multimodal AI Study Guide</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module12/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
+                <div class="category-module-item">
+                    <div class="category-module-item-name">Module 13</div>
+                    <p class="category-module-item-desc">AI Agents: Complete Study Material</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module13/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
             </div>
         </div>
 
