Add Module 15 section to index.html

--- a/index.html
+++ b/index.html
@@ -664,6 +664,11 @@
                     <p class="category-module-item-desc">LLM Tools & Agents: Complete Developer's Guide</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module14/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
+                <div class="category-module-item">
+                    <div class="category-module-item-name">Module 15</div>
+                    <p class="category-module-item-desc">Complete Guide to LangChain Agents for Data Analysis</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module15/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
             </div>
         </div>
 
