--- a/index.html
+++ b/index.html
@@ -674,6 +674,11 @@
                     <p class="category-module-item-desc">LangGraph Complete Study Material - From Generative to Agentic AI</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module16/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
+                <div class="category-module-item">
+                    <div class="category-module-item-name">Module 17</div>
+                    <p class="category-module-item-desc">Comprehensive AI Agents & Reflexion Architecture - Complete Study Guide</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module17/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
             </div>
         </div>
 
