--- a/index.html
+++ b/index.html
@@ -684,6 +684,11 @@
                     <p class="category-module-item-desc">Complete Guide: Multi-Agent AI Systems & Agentic RAG</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module18/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
+                <div class="category-module-item">
+                    <div class="category-module-item-name">Module 19</div>
+                    <p class="category-module-item-desc">Agentic AI Frameworks - Comprehensive Study Guide</p>
+                    <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module19/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
             </div>
         </div>
 
