--- a/index.html
+++ b/index.html
@@ -689,6 +689,11 @@
                     <p class="category-module-item-desc">Agentic AI Frameworks - Comprehensive Study Guide</p>
                     <a href="https://md-sahil-analyst22.github.io/Study_Material/RAG/Module19/" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
                 </div>
+                <div class="category-module-item">
+                    <div class="category-module-item-name">Notebook</div>
+                    <p class="category-module-item-desc">RAG Notebook (for now restricted, not for public access) </p>
+                    <a href="https://drive.google.com/drive/folders/1FnKYwakoCIEDgfkODZfGh2Yj3AJTI1Wn?usp=drive_link" target="_blank" rel="noopener noreferrer" class="category-module-link">Access Module</a>
+                </div>
             </div>
         </div>
 
